--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
             <label for="nodeDesc">Descrição</label>
             <textarea id="nodeDesc" placeholder="Descrição..."></textarea>
 
-            <label for="nodeLabel">Rótulo</label>
-            <input id="nodeLabel" type="text" placeholder="Categoria">
-
             <div class="row" style="margin-top:12px;">
               <div style="flex:1;">
                 <label for="nodeInPorts">Entradas</label>
@@ -113,6 +110,7 @@
     </main>
     <div class="drawerBackdrop" id="drawerBackdrop"></div>
     <button class="mobilePanelBtn" id="openPanelBtn" type="button">Editar etapa</button>
+    <div class="chipMenu" id="chipMenu"></div>
   </div>
 
 <script src="assets/app.js"></script>
