--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 
         
         <div class="panel">
-          <h2>Configura??es r?pidas</h2>
-          <div class="small">Adicione status e membros que aparecer?o nos chips.</div>
+          <h2>Configurações rápidas</h2>
+          <div class="small">Adicione ou remova status e membros dos chips.</div>
           <label for="statusInput">Novo status</label>
           <div class="row">
-            <input id="statusInput" type="text" placeholder="Ex: Revis?o">
+            <input id="statusInput" type="text" placeholder="Ex: Revisão">
             <button class="btn" id="addStatusBtn" style="white-space:nowrap;">Adicionar</button>
           </div>
           <div class="small" id="statusList" style="margin-top:8px; display:flex; flex-wrap:wrap; gap:6px;"></div>
